removed border on header.. fixed spacing issue for witness tab submit button.. CSS adjustments and tweaks.. removed padding on tab section text

--- a/www/css/themes/eye-style.css
+++ b/www/css/themes/eye-style.css
@@ -14,7 +14,8 @@
 /* A
 -----------------------------------------------------------------------------------------------------------*/
 .ui-bar-a {
-	border: 1px solid #b3b3b3 /*{a-bar-border}*/;
+    border: 1px solid #ffffff
+	/*border: 1px solid #b3b3b3 *//*{a-bar-border}*/;
 	background: #FFFFFF /*{a-bar-background-color}*/;
 	color: #3e3e3e /*{a-bar-color}*/;
 	font-weight: bold;
